@@ -1,5 +1,10 @@
 2000-11-30  Bernd Schmidt  <bernds@redhat.co.uk>
 
+	2000-09-14  Alexandre Oliva  <aoliva@redhat.com>, Bernd Schmidt  <bernds@redhat.co.uk>
+	* reload.c (find_reloads_address_1): Generate reloads for auto_inc
+	pseudos that refer to the original pseudos, not only to their
+	equivalent memory locations.
+
 	2000-09-18  Bernd Schmidt  <bernds@redhat.co.uk>
 	* reload1.c (forget_old_reloads_1): If a hard reg is stored, clear
 	its entry in spill_reg_store.
